# arma_davidson

./: .gitignore  CMakeLists.txt  Davidson.cpp  Davidson.h  Makefile  main.cpp  save.CMakeLists.txt  test1.cpp
